--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,9 @@
-astroid==2.1.0
-colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.1.5
+django-decouple==2.1
 django-heroku==0.3.1
-gcloud==0.18.3
-get==2018.11.19
-googleapis-common-protos==1.5.8
 gunicorn==19.9.0
-httplib2==0.12.1
-isort==4.3.4
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-oauth2client==4.1.3
 Pillow==5.4.1
-portalocker==1.4.0
-post==2018.11.20
-protobuf==3.7.0rc2
 psycopg2==2.7.7
-public==2018.11.20
-pyasn1==0.4.5
-pyasn1-modules==0.2.4
-pylint==2.2.2
-pypiwin32==223
-python-decouple==3.1
 pytz==2018.9
-pywin32==224
-query-string==2018.11.20
-request==2018.11.20
-rsa==4.0
-six==1.12.0
-virtualenv==16.3.0
 whitenoise==4.1.2
-wrapt==1.11.1
